--- a/unity-plugin/MeshCutting.asmdef
+++ b/unity-plugin/MeshCutting.asmdef
@@ -1,10 +1,7 @@
 {
     "name": "MeshCutting",
     "rootNamespace": "",
-    "references": [
-        "GUID:acb1d68b7aba97b4f9cc7dbabc38314c",
-        "GUID:1826c0224c0d048b88112c79bbb0cd85"
-    ],
+    "references": [],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": true,
